Gave account area an absolute width to prevent wrapping

--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -171,7 +171,7 @@ body, html, button, input {
 }
 
 #user-panel {
-	width: 19%;
+	width: 350px;
 	display: flex;
 	flex-direction: row-reverse;
 	flex-wrap: wrap;
